2012-07-19  Michael Meyer <michael.meyer@greenbone.net>

	* src/openvassd.c:
	store.h was deleted in r13728. So don't include it.

2012-07-19  Matthew Mundell <matthew.mundell@greenbone.net>

	Add new OTP version 1.1 which is like 1.0 but sends less info to the
	client initially.  Patch by Jan-Oliver Wagner.

	* src/comm.c (comm_init): Add OTP/1.1 case.

	* src/openvassd.c (scanner_thread): Skip sending some of the init info for
	OTP > 1.0.

2012-07-18  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/openvassd.c (deny_severity, allow_severity): Removed. Global
	vars are never used.

2012-07-16  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Removed built-in logfile rotation. It is not a good idea to try
	to circumvent system enviroment technology for logrotate.

	* src/log.c (MAX_LOG_SIZE_MEGS, rotate_log_file): Removed.
	(log_init): Removed call of rotate_log_file).

2012-07-13  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/comm.c (comm_send_preferences): Removed deprectated prefs sind 3.0.

2012-07-12  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/nasl_plugins.c, src/oval_plugins.c: Replace calls
	of store_load_plugin by subsequent calls of nvticache_get
	and plug_create_from_nvti_and_prefs.

2012-07-12  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Use nvticache API instead of store_* API in a first step.
	Now it is mandatory that a cache directory really exists.

	*  src/nasl_plugins.c (nasl_plugin_add): Replace use of store_
	API by nvticache API.

	* src/oval_plugins.c (oval_plugin_add): Replace use of store_
	API by nvticache API.

	* src/openvassd.c (init_openvassd): Replaced init via store_
	by direct nvtichache calls. Make it mandatory that a
	cache directory exists. Fallback of nvi directory not
	used anymore.

	* CMakeLists.txt: Increase dependency to openvas-libaries
	to 6.0.0.

2012-07-10  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Post branch version bump.
